After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679258 - The 'Since' tag for G_SOURCE_CONTINUE and G_SOURCE_REMOVE is wrong
The 'Since' tag for G_SOURCE_CONTINUE and G_SOURCE_REMOVE is wrong
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: mainloop
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-07-02 12:55 UTC by Neil Roberts
Modified: 2012-07-02 17:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the 'Since' tag for G_SOURCE_{REMOVE,CONTINUE} (1.08 KB, patch)
2012-07-02 12:56 UTC, Neil Roberts
accepted-commit_now Details | Review

Description Neil Roberts 2012-07-02 12:55:44 UTC
See patch
Comment 1 Neil Roberts 2012-07-02 12:56:08 UTC
Created attachment 217828 [details] [review]
Fix the 'Since' tag for G_SOURCE_{REMOVE,CONTINUE}

The Since tag for these was saying 2.28 but it was actually added in
2.31. It looks like all of the Since tags list stable version numbers
so this patch bumps that up to 2.32.
Comment 2 Colin Walters 2012-07-02 17:33:23 UTC
Review of attachment 217828 [details] [review]:

Looks correct.
Comment 3 Neil Roberts 2012-07-02 17:47:14 UTC
Ok, thanks. I've pushed it to master as 489b947.